# movie-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  sentiment_analysis.ipynb
