[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "datasets>=4.8.5",
    "gensim>=4.4.0",
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "umap-learn>=0.5.12",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
